update add missing files.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,14 +2,19 @@ FROM node:14
 
 WORKDIR /app
 
+# Copy package.json and package-lock.json (if available)
 COPY package*.json ./
-RUN npm install
 
+# Clear npm cache and install dependencies
+RUN npm cache clean --force && npm install
+
+# Copy the rest of the frontend code
 COPY . .
 
+# Build the React app
 RUN npm run build
 
-FROM nginx:alpine
-COPY --from=0 /app/build /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+# Serve the app using a lightweight server
+RUN npm install -g serve
+
+CMD ["serve", "-s", "build", "-l", "3000"]
