update add missing files.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,11 +5,16 @@ WORKDIR /app
 # Copy package.json and package-lock.json (if available)
 COPY package*.json ./
 
-# Clear npm cache and install dependencies
-RUN npm cache clean --force && npm install
+# Clear npm cache, remove node_modules, and install dependencies
+RUN npm cache clean --force && \
+    rm -rf node_modules && \
+    npm install
 
 # Copy the rest of the frontend code
 COPY . .
+
+# Rebuild node-sass
+RUN npm rebuild node-sass
 
 # Build the React app
 RUN npm run build
