--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 # Copy package.json and package-lock.json (if available)
 COPY package*.json ./
 
-# Clear npm cache, remove node_modules, and install dependencies
+# Install dependencies
 RUN npm install
 
 # Copy the rest of the frontend code
@@ -14,10 +14,8 @@ COPY . .
 # Build the React app
 RUN npm run build
 
+# Production environment
 FROM nginx:alpine
-
 COPY --from=build /app/build /usr/share/nginx/html
-
 EXPOSE 80
-
 CMD ["nginx", "-g", "daemon off;"]
